chore: CDI conversion